Fixed: Overflow in body

--- a/styles/globals.less
+++ b/styles/globals.less
@@ -8,6 +8,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
+  overflow: hidden;
+
   @media @mobile {
     background-color: darken(@main-color, 6);
   }
